# grove-vision-ai-v2-ros2

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.pi-i2c.yml  docker-compose.pi-uart.yml  docker-compose.pi-usb.yml  docker-compose.pi.yml  docker-compose.yml
docker/: Dockerfile  entrypoint.sh
src/vision_perception/: CMakeLists.txt  package.xml
src/vision_perception/config/: params.yaml
src/vision_perception/launch/: vision_perception.launch.py
src/vision_perception/msg/: Detection.msg
src/vision_perception/scripts/: read_vision_ai.py  web_dashboard.py
src/vision_perception/test/: test_mock_node.py
src/vision_perception/vision_perception_nodes/: __init__.py  _mock_source.py  _types.py  i2c_reader.py  mock_vision_node.py  serial_reader.py  vision_ai_node.py
